[package]
name = "walltaker-universal-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
anyhow = "1"
wallpaper = "3.2.0"